# build-fun

./: README.md  Taskfile.yml
calculator/: CMakeLists.txt
calculator/include/calculator/: calculator.hpp
calculator/src/: calculator.cpp
client/: CMakeLists.txt
client/src/: main.cpp
special_math/: CMakeLists.txt
special_math/include/special_math/: add.hpp
special_math/src/: add.cpp
